2008-06-15 Erwann Chenede - <erwann.chenede@sun.com>

	* desktop-mime-cache/desktop-mime-cache
	* desktop-mime-cache/desktop-mime-cache.xml
	* gconf-cache/gconf-cache :
	  added minor changes suggested by David Bustos

2008-06-11 Erwann Chenede - <erwann.chenede@sun.com>

	* SUNWdesktop-cache.copyright
	* SUNWdesktop-cache.spec : removed as the package 
	  is integrated in the spec-files repo now

2008-06-11  Laszlo (Laca) Peter  <laca@sun.com>

	* desktop-mime-cache/desktop-mime-cache: delete bogus ``s
	* gconf-cache/gconf-cache: s/NON_DEGRADE/MON_DEGRADE/
	* input-method/input-method-cache: delete bogus ``s;
	  s/NON_DEGRADE/MON_DEGRADE/; use the 64-bit gtk-query-immodules-2.0
	  against the 64-bit immodules when generating the 64-bit config file
	* mime-types-cache/mime-types-cache: look for new config files
	  under /usr/share/mime/packages only; delete bogus ``s;
	  s/NON_DEGRADE/MON_DEGRADE/
	* pixbuf-loaders/pixbuf-loaders-installer: s/2.10.0/*/ so it's a bit
	  more future-proof; delete bogus ``s; use the 64-bit
	  gdk-pixbuf-query-loaders when generating the 64-bit config file

2008-06-08 Erwann Chenede - <erwann.chenede@sun.com>

	* COPYING: CDDL

2008-06-06  Darren Kenny  <darren.kenny@sun.com>

	* gconf-cache/gconf-cache:
	  Fix a bad merge by me... 

2008-06-06  Darren Kenny  <darren.kenny@sun.com>

	* pixbuf-loaders/pixbuf-loaders-installer:
	  Missed one script when updating exit codes.

2008-06-06  Darren Kenny  <darren.kenny@sun.com>

	* desktop-mime-cache/desktop-mime-cache:
	* gconf-cache/gconf-cache:
	* icon-cache/icon-cache:
	* input-method/input-method-cache:
	* mime-types-cache/mime-types-cache:
	  After re-reading the smf_method manpage, I was mistaken about the exit
	  codes - should be OK for success, and NON_DEGRADE for error here. 

2008-06-06  Darren Kenny  <darren.kenny@sun.com>

	* desktop-mime-cache/desktop-mime-cache:
	* icon-cache/icon-cache:
	* input-method/input-method-cache:
	* mime-types-cache/mime-types-cache: