@@ -91,7 +91,7 @@ if [ -n "$SCHEMAS" ]; then
     /usr/bin/gconftool-2 --makefile-install-rule $SCHEMAS > /dev/null
   if [ $? -ne 0 ]; then
     echo "gconftool-2 exited with an error while installing schemas"
-    exit $SMF_EXIT_MON_DEGRADE
+    exit $SMF_EXIT_ERR_FATAL
   else
     echo "Schema files merged in the GConf cache"
   fi
