@@ -92,7 +92,7 @@ for DIR in "" $ARCH64; do
 	> /etc/$DIR/gtk-2.0/gtk.immodules
     if [ $? -ne 0 ]; then
       echo "gtk-query-immodules-2.0 exited with an error while generating the cache file /etc/$DIR/gtk-2.0/gtk.immodules"
-      exit $SMF_EXIT_MON_DEGRADE
+      exit $SMF_EXIT_ERR_FATAL
     else
       echo "input method cache installed in /etc/$DIR/gtk-2.0/gtk.immodules"
     fi
