@@ -81,7 +81,7 @@ if [ -n "$RESULT" ]; then
   /usr/bin/update-mime-database /usr/share/mime
   if [ $? -ne 0 ]; then
     echo "update-mime-database exited with an error while generating the mime type cache /usr/share/mime/mime.cache"
-    exit $SMF_EXIT_MON_DEGRADE
+    exit $SMF_EXIT_ERR_FATAL
   else
     echo "mime type cache /usr/share/mime/mime.cache generated"
   fi
